--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0ebdbaeb66.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/index.css">
     <title>Head Musician Tareq Tyson</title>
 </head>
 <body>
     <header>
         <img src="images/logo-head.png" alt="Head-logo" class="logo">
-        <nav class="topnav">
-            <a href="#" class="Works">Works</a>
-            <a href="#" class="Services">Services</a>
-            <a href="#" class="contact">Contact</a>
+        <nav id="hamnav">
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger"/>
+            <div id="hamitems">
+                <a href="a.html">Works</a>
+                <a href="b.html">Services</a>
+                <a href="c.html">Contact</a>
+            </div>
         </nav>
-        <img src="images/Icon.png" alt="menu-icon" class="menu-icon">
     </header>
     <section>
         <div class="text">
